--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <form action="https://formsubmit.co/sameerabon150@Gmail.com" method="POST">
             <div class="input-box">
                 <h1>Contact Form</h1>
-                <input type="name" placeholder="Full Nme" required>
+                <input type="name" name="name" placeholder="Full Nme" required>
             </div>
             <div class="input-box">
-                <input type="email" placeholder="E-Mail" required>
+                <input type="email" name="email" placeholder="E-Mail" required>
             </div>
             <div class="input-box">
-                <input type="Massage" placeholder="Massage" required>
+                <input type="Massage" name="Massage" placeholder="Massage" required>
             </div>
             <button type="submit" class="btn">Send</button>
             <div class="register-link">
